squash merged with old

--- a/cosmoslik/plugins/models/camb/camb/Makefile
+++ b/cosmoslik/plugins/models/camb/camb/Makefile
@@ -8,9 +8,7 @@ include ../../../../../Makefile.inc
 # set of flags just for this module you can set them by hand
 # here:
 # F90C = 
-# F90FLAGS =
-
-
+F90FLAGS += -fPIC
 
 
 
