--- a/example.ini
+++ b/example.ini
@@ -15,6 +15,7 @@ omk = 0
 omnuh2 = 0
 theta = .010341 [0 1 .00002]
 ns = .98 [0 2 .01]
+nrun = 0
 logA = 3.17 [2 4 .01]
 tau = 0.088 [0 1 .015]
 w = -1
